@@ -46,7 +46,7 @@ class NodeEvent(Event):
 
 
 class CollectionStartEvent(NodeEvent):
-    __slots__ = 'tag', 'implicit', 'flow_style'
+    __slots__ = 'tag', 'implicit', 'flow_style', 'nr_items'
 
     def __init__(
         self,
@@ -57,12 +57,14 @@ class CollectionStartEvent(NodeEvent):
         end_mark=None,
         flow_style=None,
         comment=None,
+        nr_items=None,
     ):
-        # type: (Any, Any, Any, Any, Any, Any, Any) -> None
+        # type: (Any, Any, Any, Any, Any, Any, Any, Optional[int]) -> None
         NodeEvent.__init__(self, anchor, start_mark, end_mark, comment)
         self.tag = tag
         self.implicit = implicit
         self.flow_style = flow_style
+        self.nr_items = nr_items
 
 
 class CollectionEndEvent(Event):
